change deprecated new Double(d) to Double.valueOf(d)